Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -181,8 +181,6 @@ Error message and password prompt
 
 <li>$:/state/sidebar</li>
 
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -275,6 +273,8 @@ Error message and password prompt
 
 <li>Lambda Calculus</li>
 
+<li>Linear Regression</li>
+
 <li>Logistic Regression</li>
 
 <li>Markov Decision Process</li>
@@ -318,6 +318,8 @@ Error message and password prompt
 <li>Quantum Temporal Logic by Nengkun Yu</li>
 
 <li>Real Numbers</li>
+
+<li>Regularization and Overfitting</li>
 
 <li>Reinforcement Learning with Langevin Dynamics</li>
 
@@ -9851,14 +9853,11 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200210034341141" modified="20200210035210178" title="$:/state/showeditpreview" revision="2" bag="default">
-<pre>no</pre>
-</div>
-<div created="20200210034446641" modified="20200210042349279" title="$:/state/sidebar" revision="10" bag="default">
+<div created="20200210174640426" modified="20200210174640426" title="$:/state/showeditpreview" revision="1" bag="default">
 <pre>yes</pre>
 </div>
-<div created="20200210042147951" modified="20200210042147951" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200210042601383" modified="20200210043540629" title="$:/state/sidebar" revision="2" bag="default">
+<pre>yes</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -9872,7 +9871,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200209193310080" list="[[UCLA CS M146 - Machine Learning]]" modified="20200210042151731" title="$:/StoryList" revision="91" bag="default">
+<div created="20200210042556691" list="[[UCLA CS M146 - Machine Learning]] [[Regularization and Overfitting]] [[Linear Regression]]" modified="20200210183212041" title="$:/StoryList" revision="32" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9933,8 +9932,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200209193316166" modified="20200210042150333" title="$:/temp/search" revision="51" bag="default">
-<pre>ucla cs </pre>
+<div created="20200210042552844" modified="20200210043545748" title="$:/temp/search" revision="16" bag="default">
+<pre>ucla cs</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10428,7 +10427,7 @@ Factors to consider:
 
 !!! Dividing Data into Training Set</pre>
 </div>
-<div created="20200207001535228" modified="20200209193852321" tags="incomplete [[theoretical computer science]] [[machine learning]]" title="Combinatorial Optimization Algorithms for Clustering and Machine Learning by Dorith Hochbaum" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200207001535228" modified="20200209193853936" tags="incomplete [[theoretical computer science]] [[machine learning]]" title="Combinatorial Optimization Algorithms for Clustering and Machine Learning by Dorith Hochbaum" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Overview:
 
 * motivation: image segmentation, normalized cut
@@ -10800,7 +10799,7 @@ Can deal with this by:
 * Use a learning algorithm that can deal with missing features on its own
 * Using [[Data Imputation Techniques]]</pre>
 </div>
-<div created="20200126035727023" modified="20200209230307299" tags="incomplete [[machine learning]]" title="Decision Trees" type="text/vnd.tiddlywiki" revision="2" bag="default">
+<div created="20200126035727023" modified="20200209230308437" tags="incomplete [[machine learning]]" title="Decision Trees" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Setup:
 
 * Set of possible instances X - each $$x \in X$$ is a feature vector (e.g. humidity=low, wind=weak etc.)
@@ -11002,7 +11001,7 @@ Creating a network with 2 k-components and one k-core - take two copies of a k +
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010432345" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div created="20200209230643105" modified="20200209230925073" tags="[[machine learning]]" title="How to choose a ML Algorithm" revision="1" bag="default">
+<div created="20200209230643105" modified="20200209230926568" tags="[[machine learning]]" title="How to choose a ML Algorithm" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Visualize data to understand trends in the dataset - understand which features are useful and which aren't or what kind of relation there exists between the features and labels / values
 
 Which inductive bias seems most reasonable in the given context?
@@ -11027,7 +11026,7 @@ and many more things that you can look up by googling tiddlywiki
 
 Thanks for contributing!</pre>
 </div>
-<div created="20200209224536916" modified="20200209225559891" tags="[[machine learning]]" title="Hyperparameters" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200209224536916" modified="20200209225601005" tags="[[machine learning]]" title="Hyperparameters" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Hyperparameter in Decision Tree: Max Depth of decision tree - critical to prevent overfitting, based on empirical studies
 
 Hyperparameter selections (tuning) by using a validation set - split data into train to learn h the hypothesis that is the best ($$D^{Train}$$), test  - evaluate model for unseen values (($$D^{Test}$$)) and validation data - values used to optimize hyperparameters ($$D^{Dev}$$)
@@ -11256,7 +11255,7 @@ Branching Far Away:
 <pre>Axiomatic Definition:
 </pre>
 </div>
-<div created="20200209225659588" modified="20200210034423173" tags="[[machine learning]]" title="K Nearest Neighbors" revision="4" bag="default">
+<div created="20200209225659588" modified="20200210034424331" tags="[[machine learning]]" title="K Nearest Neighbors" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://imgur.com/JcQUkEa
 
 Premise / Inductive Bias: Label of an instance is similar to labels of nearby points
@@ -11326,7 +11325,72 @@ Hyperparameters in NNC:
 
 It is the fundamental basis for all functional programming languages. </pre>
 </div>
-<div created="20200210035150456" modified="20200210042140737" tags="[[machine learning]]" title="Logistic Regression" revision="9" bag="default">
+<div created="20200210061141342" modified="20200210183226738" tags="[[machine learning]]" title="Linear Regression" revision="3" bag="default">
+<pre>Regression - predicting a real valued variable
+
+Key difference from classification - we can measure closeness of predictions and labels i.e. a guess of 11 as a shoe size for a true label 12 is better than a guess of 7
+
+How to measure error in such models - absolute difference or squared difference 
+
+Linear Regression (ordinary least squares):
+
+* Input: $$x \in R^D$$ (covariates, predictors, features)
+* Output: $$y \in R$$ (responses, targets, outcomes, outputs)
+* Hypotheses / Model: $$h_{w, b} = b + \sum_d w_d x_d = b + w^T x$$, $$\theta = {(b, w_1, ..., w_D)}^T$$
+
+Cost function is the Residual Sum of Squares (RSS) - https://imgur.com/Vq3kTnr - again can assume b = 0 in manner as discussed earlier - so just need to determine weights
+
+Objective function = $$J(\theta) = \sum_n {(y_n - h_\theta(x_n))}^2$$ - can compute minimum analytically - may be better than gradient descent as fixed time:
+
+* Take partial derivatives with respect to $$\theta_i \forall i$$ and set to 0
+* Algebraic manipulation and then solve for $$\theta_i$$s
+
+Why is minimizing $$J(\theta)$$ sensible (Probabilistic Interpretation of the model):
+
+* Noisy observation model - $$Y = \theta_0 + \theta_1 X + \eta$$ where $$ \eta \sim N(0, \sigma^2)$$ is a Normal random var
+* Here we try to show that the solution to minimizing cost is the same as maximizing likelihood (over $$\theta$$) of this dataset assuming this noisy observation model
+* Probabilistic model -&gt; Likelihood function
+* Therefore $$Y \sim N(\theta_0 + \theta_1 X, \sigma^2)$$
+* Thus likelihood of one sample is $$p(y_n | x_n; \theta, \sigma^2) = N(\theta_0 + \theta_1 x_n, \sigma^2) = \frac{1}{\sqrt{2\pi\sigma^2} }e^{{(y_n - (\theta_0 + \theta_1 x_n)}^2 / 2 \sigma^2}$$
+* Log Likelihood Derivation: https://imgur.com/ToZ1Cqk and from this it is easy to see that log likelihood is maximized when the term identical to $$J(\theta)$$ is maximized
+
+Benefits of Probabilistic Interpretation - gives a logical reasoning for choosing a particular cost function, makes assumptions clear
+
+Assumptions for this model - $$y_n$$ are&quot;
+
+* independent
+* normally distributed
+* mean is a linear function of $$x_n$$
+* constant variance $$\sigma^2$$
+
+Generalizing to D Dimensions:
+
+* $$J(\theta) = \sum_n {(y_n - (\theta_0 + \sum_d \theta_d x_{nd}))}^2$$ if we redefine our variables using the d -&gt; d + 1 trick (prepend 1 to every x and prepend b i.e. $$\theta_1$$ here to weight vector to create $$\theta$$) we get $$\sum_n {(y_n - \theta^T x_n)}^2$$
+* Design Matrix: $$X = {(x_1^T, ..., x_N^T)}^T$$, target vector: $$y = (y_1, ..., y_N)$$
+* Vector of predictions = $$X \theta = {(x_1^T \theta, ..., x_N^T \theta)}^T$$
+* Therefore errors = $$y - X\theta$$, therefore $$J(\theta) = \| y - X \theta\|_2^2 = (y - X \theta)^T (y - X \theta) = \theta^TX^TX\theta - 2{(X^Ty)}^T \theta + constant$$
+* Handwaving sign manipulation cause equation to 0 eventually
+* $$\nabla J(\theta) = 2X^TX\theta - 2X^Ty = 0$$
+* $$\hat{\theta} = {(X^TX)}^{-1} X^T y$$
+* mini summary: https://imgur.com/AXU48M6
+
+Computational Complexity:
+
+* Analytical method - multiplication of matrix = $$O(ND^2)$$, matrix inversion = $$O(D^3)$$, impractical for large N or D
+* Batch gradient descent - entire dataset used every iteration -  https://imgur.com/C644URV -  O(ND) as every iteration takes O(ND) and number of iterations is constant
+* Stochastic gradient descent - stochastic as random points picked - https://imgur.com/0NiRarB - one sample at a time - approximates gradient with a single data point - O(D) as every iteration takes O(D) and number of iterations is constant
+* Mini-batch variant - trade-off between accuracy of estimating gradient and computational cost 
+
+What if $$X^TX$$ is not invertible:
+
+* N &lt; D - there will always be some feature that can be written as a linear combination of other features - intuitively not enough data to estimate all the points
+* X columns are not linearly independent - intuitively two features that are perfectly correlated or one feature is actually a linear combination of other features
+
+Regularized Linear Regression:
+
+* </pre>
+</div>
+<div created="20200210035150456" modified="20200210061025465" tags="[[machine learning]]" title="Logistic Regression" type="text/vnd.tiddlywiki" revision="4" bag="default">
 <pre>Setup for binary classification:
 
 * Hypotheses / Model: $$h_{w, b} (x) = p(y = 1 | x; b, w) = \sigma (a(x))$$ where $$a(x) = b + \sum_d w_d x_d = b + w^T x$$ and $$\sigma (\cdot)$$ is the sigmoid function $$ = \frac{1}{1 + e^{-a}}$$
@@ -11348,6 +11412,33 @@ Therefore $$p(y_n | x_n; b, w) =  {(h_{w, b}(x_n))}^{y_n} {(1 - h_{w, b}(x_n))}^
 Thus log likelihood expression for all: $$l(w, b) = \sum_n y_n log h_{w, b} (x_n) + (1 - y_n) log(1 - h_{w, b} x_n)$$
 
 Therefore cost = $$J(\theta) = J(w, b) = -  \sum_n y_n log h_{w, b} (x_n) + (1 - y_n) log(1 - h_{w, b} x_n)$$
+
+We can use same trick used in [[Perceptron]] to ignore distinction between bias and weights by converting prepending 1 to every input vector $$x$$ and $$b$$ to $$\theta$$
+
+Aim: minimize cost function - Objective function
+
+Gradient Descent - https://imgur.com/4X7Ds6M - use small updates in direction opposite to gradient to approach minimum
+
+Determining convergence - convex implies that this would converge - https://imgur.com/Sy8dqBT - positive semidefinite Hessian Matrix (generalization of second derivate for multi-variate case) - https://imgur.com/F75eQxk
+
+A matrix H is positive semi-definite iff $$z^T H z - \sum_{j, k} H_{j,k} z_j z_k \geq 0 $$ or when all eigenvalues are non-negative
+
+Gradient Descent for multi-variate functions - example - https://imgur.com/vi1HwH4:
+
+* $$\theta^{j+1} \leftarrow \theta - \eta \frac{\delta f }{\delta \theta}$$
+* $$\eta$$ is often called the step size
+* minimizing a function therefore $$-\eta$$
+* with suitable choice of n, iterative procedure will converge
+
+Choosing right n is important - too small takes too long to converge, too large keeps overshooting - https://imgur.com/CdxvMoS
+
+Derivation of gradient descent equation for logistic regression - https://imgur.com/H6d9ikY, https://imgur.com/s88YA4K
+
+Numerical Optimization - choose proper step size &gt; 0 and update with above discussed gradient descent formula - can choose step size adaptively - techniques such as line search
+
+Summary - https://imgur.com/cgsGbJD
+
+
 
 </pre>
 </div>
@@ -11544,7 +11635,7 @@ In April 2008, Google launched App Engine, with a free trial version limited to 
 
 The original intent of PaaS was to simplify the code-writing process for developers, with the infrastructure and operations handled by the PaaS provider. Originally, all ~PaaSes were in the public cloud. Because many companies did not want to have everything in the public cloud, private and hybrid PaaS options (managed by internal IT departments) were created.</pre>
 </div>
-<div created="20200209235233023" modified="20200210034534561" tags="[[machine learning]]" title="Perceptron" revision="7" bag="default">
+<div created="20200209235233023" modified="20200210043631674" tags="[[machine learning]]" title="Perceptron" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>Example of a Linear Classifier - produces a linear decision boundary
 
 Binary Classification Problem:
@@ -11570,6 +11661,8 @@ Perceptron Learning: (Consider we only have one training example $$(x_n, y_n)$$:
 * $$\alpha = w^T x_n$$
 * if $$y_n \alpha &gt; 0$$, prediction correct -&gt; do nothing
 * if $$y_n \alpha \leq 0$$, prediction wrong -&gt; $$w^{NEW} \leftarrow w^{OLD} + y_n x_n$$ - move towards the vector $$x_n$$ or away from it
+
+https://imgur.com/gxqSUTK 
 
 Why does this work: consider case when update is made
 
@@ -11782,6 +11875,9 @@ while m(p) = 1, do S od; M(p) = 1, measure p by (M0, M1)
 Decidability of QTL formula - programs without nondeterminism, </pre>
 </div>
 <div created="20200131072027431" modified="20200131072106707" tags="incomplete [[real analysis]]" title="Real Numbers" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre></pre>
+</div>
+<div created="20200210183218722" modified="20200210183219667" tags="[[machine learning]]" title="Regularization and Overfitting" revision="1" bag="default">
 <pre></pre>
 </div>
 <div created="20200205001742305" modified="20200205014948019" tags="[[needs formatting]] [[reinforcement learning]]" title="Reinforcement Learning with Langevin Dynamics" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -12080,7 +12176,7 @@ Proof:
 # [[Quantum Temporal Logic by Nengkun Yu]]
 </pre>
 </div>
-<div created="20200126032331506" modified="20200209230636019" tags="[[machine learning]] ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200126032331506" modified="20200209230637129" tags="[[machine learning]] ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
 # [[Overview of Machine Learning]]
 # [[Decision Trees]]
