--- a/index.html
+++ b/index.html
@@ -177,10 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/showeditpreview</li>
-
-<li>$:/state/sidebar</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -9859,12 +9855,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200210174640426" modified="20200210183729033" title="$:/state/showeditpreview" revision="3" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200210042601383" modified="20200210043540629" title="$:/state/sidebar" revision="2" bag="default">
-<pre>yes</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9877,7 +9867,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200210042556691" list="[[UCLA CS M146 - Machine Learning]] [[Regularization and Overfitting]]" modified="20200210185244574" title="$:/StoryList" revision="71" bag="default">
+<div created="20200211174514590" list="Welcome [[How to Contribute?]]" modified="20200211174607332" title="$:/StoryList" revision="13" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9938,8 +9928,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200210042552844" modified="20200210183945419" title="$:/temp/search" revision="42" bag="default">
-<pre>overfitting</pre>
+<div created="20200211174511621" modified="20200211174629153" title="$:/temp/search" revision="15" bag="default">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10940,7 +10930,7 @@ tbd
 <div author="" created="20191124064904814" modified="20191124064949779" tags="research probability math" title="Do Calculus" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://arxiv.org/pdf/1305.5506.pdf</pre>
 </div>
-<div modified="20200210185950217" title="Draft of 'Regularization and Overfitting'" revision="972" bag="default">
+<div created="20200210185952238" modified="20200210185952238" title="Draft of 'Regularization and Overfitting'" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
 <div created="20191227170002568" modified="20191227170613995" tags="[[real analysis]] math [[discrete math]]" title="Equivalence Relations" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -11035,14 +11025,14 @@ and many more things that you can look up by googling tiddlywiki
 
 Thanks for contributing!</pre>
 </div>
-<div created="20200209224536916" modified="20200209225601005" tags="[[machine learning]]" title="Hyperparameters" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200209224536916" modified="20200211174557386" tags="[[machine learning]]" title="Hyperparameters" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre>Hyperparameter in Decision Tree: Max Depth of decision tree - critical to prevent overfitting, based on empirical studies
 
-Hyperparameter selections (tuning) by using a validation set - split data into train to learn h the hypothesis that is the best ($$D^{Train}$$), test  - evaluate model for unseen values (($$D^{Test}$$)) and validation data - values used to optimize hyperparameters ($$D^{Dev}$$)
+Hyperparameter selections (tuning) by using a validation set - split data into train to learn h the hypothesis that is the best ($$D^{Train}$$), test  - evaluate model for unseen values ($$D^{Test}$$) and validation data - values used to optimize hyperparameters ($$D^{Dev}$$)
 
 Recipe:
 
-* For each possible value of hyperparameter - train on ($$D^{Train}$$), test on ($$D^{Dev}$$) and pick model with best performance . on ($$D^{Dev}$$) and then test finally on ($$D^{Test}$$)
+* For each possible value of hyperparameter - train on $$D^{Train}$$, test on $$D^{Dev}$$ and pick model with best performance on $$D^{Dev}$$ and then test finally on $$D^{Test}$$
 
 Cross-Validation = split training data into k equal parts (fold / splits), each fold is used as a validation set once with the rest as training data (K = N - LOOCV)
 
@@ -11334,7 +11324,7 @@ Hyperparameters in NNC:
 
 It is the fundamental basis for all functional programming languages. </pre>
 </div>
-<div created="20200210061141342" modified="20200210183521570" tags="[[machine learning]]" title="Linear Regression" revision="5" bag="default">
+<div created="20200210061141342" modified="20200210183522727" tags="[[machine learning]]" title="Linear Regression" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Regression - predicting a real valued variable
 
 Key difference from classification - we can measure closeness of predictions and labels i.e. a guess of 11 as a shoe size for a true label 12 is better than a guess of 7
@@ -11397,7 +11387,7 @@ What if $$X^TX$$ is not invertible:
 
 Deal with these problems in [[Ridge Regression]]</pre>
 </div>
-<div created="20200210035150456" modified="20200210061025465" tags="[[machine learning]]" title="Logistic Regression" type="text/vnd.tiddlywiki" revision="4" bag="default">
+<div created="20200210035150456" modified="20200210061026644" tags="[[machine learning]]" title="Logistic Regression" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Setup for binary classification:
 
 * Hypotheses / Model: $$h_{w, b} (x) = p(y = 1 | x; b, w) = \sigma (a(x))$$ where $$a(x) = b + \sum_d w_d x_d = b + w^T x$$ and $$\sigma (\cdot)$$ is the sigmoid function $$ = \frac{1}{1 + e^{-a}}$$
@@ -11495,7 +11485,7 @@ while others like:
 * SVMs with non-linear kernel
 would be better if the data cannot be modeled by a linear model. </pre>
 </div>
-<div created="20200210184543035" modified="20200210185241062" tags="[[machine learning]]" title="Nonlinear Basis Functions" revision="2" bag="default">
+<div created="20200210184543035" modified="20200210185242162" tags="[[machine learning]]" title="Nonlinear Basis Functions" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Apply transformations to the input to convert non-linearly separable data into something that is linearly separable
 
 Example 1: product of features is a good separator - https://imgur.com/BGOb4nz
@@ -11655,10 +11645,11 @@ In April 2008, Google launched App Engine, with a free trial version limited to 
 
 The original intent of PaaS was to simplify the code-writing process for developers, with the infrastructure and operations handled by the PaaS provider. Originally, all ~PaaSes were in the public cloud. Because many companies did not want to have everything in the public cloud, private and hybrid PaaS options (managed by internal IT departments) were created.</pre>
 </div>
-<div created="20200209235233023" modified="20200210043631674" tags="[[machine learning]]" title="Perceptron" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200209235233023" modified="20200211174626653" tags="[[machine learning]]" title="Perceptron" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre>Example of a Linear Classifier - produces a linear decision boundary
 
 Binary Classification Problem:
+
 * Instance: $$x \in R^D$$
 * Label: $$y \in \{-1, 1\}$$
 * Model / Hypotheses: $$ H = \{h | h: X \rightarrow Y, h(x) = sign(\sum_{d=1}^D w_dx_d + b)\}$$
@@ -11670,6 +11661,7 @@ Perceptron Predict:
 * $$\alpha$$ is called the activation, and prediction = sign of $$\alpha$$
 
 Hyperplanes through the origins: 
+
 * consider x that satisfies $$g(x) = w^T \cdot x + b = 0$$, these x define a hyperplane in d dimensions, and can rewrite this as a hyperplane passing through the origin in D + 1 dimensions
 * $$\hat{w} = (b, w_1, ... , w_D)$$
 * $$\hat(x) = (1, x_1, ...., x_D)^T$$
@@ -11897,7 +11889,7 @@ Decidability of QTL formula - programs without nondeterminism, </pre>
 <div created="20200131072027431" modified="20200131072106707" tags="incomplete [[real analysis]]" title="Real Numbers" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200210183218722" modified="20200210191627545" tags="[[machine learning]]" title="Regularization and Overfitting" type="text/vnd.tiddlywiki" revision="6" bag="default">
+<div created="20200210183218722" modified="20200210191628670" tags="[[machine learning]]" title="Regularization and Overfitting" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Overfitting in polynomial regression: https://imgur.com/JlRPEc9
 
 Large weight values indicate undesired complexity as model is brittle i.e. small changes in sample can cause extremely different hypotheses being selected
@@ -12020,7 +12012,7 @@ implementable in entropic mirror descent - hsieh et al 2019
 <div author="Siddharth Joshi" created="20191125022514242" modified="20191125022735084" tags="[[reinforcement learning]] [[machine learning]] incomplete" title="Reinforcement Learning: Introduction" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://skymind.ai/wiki/deep-reinforcement-learning</pre>
 </div>
-<div created="20200210183534008" modified="20200210184456930" tags="[[machine learning]]" title="Ridge Regression" revision="4" bag="default">
+<div created="20200210183534008" modified="20200210184458014" tags="[[machine learning]]" title="Ridge Regression" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>$$l_2$$ regularized linear regression aka Ridge Regression
 
 Deals with issue of $$XX^T$$ not being invertible in [[Linear Regression]]
@@ -12256,7 +12248,7 @@ Proof:
 # [[Quantum Temporal Logic by Nengkun Yu]]
 </pre>
 </div>
-<div created="20200126032331506" modified="20200210191752318" tags="[[machine learning]] ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200126032331506" modified="20200210191753424" tags="[[machine learning]] ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
 # [[Overview of Machine Learning]]
 # [[Decision Trees]]
