--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -9855,6 +9857,9 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
+<div created="20200211175853129" modified="20200211175853129" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
+<pre>$:/core/ui/SideBar/More</pre>
+</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9867,7 +9872,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200211174514590" list="Welcome [[How to Contribute?]]" modified="20200211174607332" title="$:/StoryList" revision="13" bag="default">
+<div created="20200211174514590" list="Welcome [[How to Contribute?]]" modified="20200211175943657" title="$:/StoryList" revision="27" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -11702,7 +11707,7 @@ Perceptron Learning:
 
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191124054140398" modified="20191124054454331" tags="incomplete [[intelligence project]] research math topology" title="Persistent Homology" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191124054140398" modified="20200211175931366" tags="[[intelligence project]] math topology" title="Persistent Homology" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>Persistent homology is a method for computing topological features of a space at different spatial resolutions. More persistent features are detected over a wide range of spatial scales and are deemed more likely to represent true features of the underlying space rather than artifacts of sampling, noise, or particular choice of parameters.
 
 Useful Links:
