Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9872,7 +9872,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200211174514590" list="Welcome [[How to Contribute?]]" modified="20200211175943657" title="$:/StoryList" revision="27" bag="default">
+<div created="20200211174514590" list="Welcome [[How to Contribute?]]" modified="20200211175943657" title="$:/StoryList" revision="29" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -12322,9 +12322,9 @@ Proof:
 # [[Models of Networks]]
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20200204071226887" tags="introduction" title="Welcome" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191119180323660" modified="20200211182517396" tags="introduction" title="Welcome" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>Hi, welcome to my ~TiddlyWiki!
-This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
+This is a collection of notes on a wide variety of topics compiled from my personal work.
 Enjoy!</pre>
 </div>
 
